<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <android.opengl.GLSurfaceView
        android:id="@+id/effectsview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageButton
        android:id="@+id/openeffects"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/transparent"
        android:clickable="true"
        android:onClick="showPopUp"
        android:padding="@dimen/medium_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/filter"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/camerareturn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_below="@+id/openeffects"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="0dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:onClick="returnToCamera"
        android:padding="@dimen/medium_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_camera"
        android:visibility="visible" />


</RelativeLayout>
