...
    <item
        android:id="@+id/crossprocess"
        app:showAsAction="never"
        android:title="crossprocess"/>

    <item
        android:id="@+id/documentary"
        app:showAsAction="never"
        android:title="documentary"/>

    <item
        android:id="@+id/duotone"
        app:showAsAction="never"
...
